# capicxx-core-runtime

./: .gitignore  AUTHORS  Android.bp  Android.mk  CHANGES  CMakeLists.txt  CommonAPI-uninstalled.pc.in  CommonAPI.pc.in  CommonAPI.sln  CommonAPI.vcxproj  Makefile.am  NEWS  README  README.html  README.md  Tests.vcxproj  aminclude.am  commonapi.spec.in  configure.ac  doxygen.cfg  libcommonapi.yaml
.github/workflows/: c-cpp.yml
CommonAPI/: .autotools  .cproject  CommonAPI-uninstalled.pc.in  CommonAPI.pc.in  configure.ac
CommonAPI/src/CommonAPI/: Attribute.h  Event.h  Factory.h  MiddlewareInfo.h  Proxy.h  Runtime.h  SerializableStruct.h  Stub.h
cmake/: CommonAPIConfig.cmake.in  CommonAPIConfigVersion.cmake.in
docx/: 01_mainpage.dox
include/CommonAPI/: Address.hpp  Attribute.hpp  AttributeExtension.hpp  ByteBuffer.hpp  CallInfo.hpp  CommonAPI.hpp  Config.hpp  ContainerUtils.hpp  Deployable.hpp  Deployment.hpp  Enumeration.hpp  Event.hpp  Export.hpp  Factory.hpp  IniFileReader.hpp  InputStream.hpp  Logger.hpp  LoggerImpl.hpp  MainLoopContext.hpp  OutputStream.hpp  Proxy.hpp  ProxyManager.hpp  RangedInteger.hpp  Runtime.hpp  SelectiveEvent.hpp  SerializableArguments.hpp  Struct.hpp  Stub.hpp  TypeOutputStream.hpp  Types.hpp  Utils.hpp  Variant.hpp  Version.hpp
include/CommonAPI/Extensions/: AttributeCacheExtension.hpp
src/CommonAPI/: Address.cpp  Attribute.h  AttributeExtension.h  ByteBuffer.h  CMakeLists.txt  CallInfo.cpp  CommonAPI.h  Configuration.cpp  Configuration.h  ContainerUtils.cpp  ContainerUtils.h  Event.h  Factory.cpp  Factory.h  Factory.hpp  IniFileReader.cpp  InputStream.cpp  InputStream.h  Logger.cpp  LoggerImpl.cpp  MainLoopContext.cpp  MainLoopContext.h  MiddlewareInfo.h  OutputStream.h  Proxy.cpp  Proxy.h  ProxyManager.cpp  ProxyManager.h  Runtime.cpp  Runtime.h  SelectiveEvent.h  SerializableStruct.h  SerializableVariant.h  SerializableVariant.hpp  SerializableVariant.ipp  ServicePublisher.cpp  ServicePublisher.h  ServicePublisher.hpp  Stub.h  Utils.cpp  (+3 more)
src/test/: VariantTest.cpp
